--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
+    "mogoose": "^0.0.1-security",
     "mongoose": "^6.3.5"
   }
 }
